--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3813,10 +3813,13 @@ div.workbench-info-block{
 .page-campaign-partners{
 	.hwc-share-widget{
 		float: right;
-		padding-right: 1em;
+		padding-right: 25px;
 	}
 	.field-name-body{
 		clear: both;
+	}
+	.share-this-article{
+		float: none !important;
 	}
 }
 
