--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7600,10 +7600,13 @@ body.video-page #block-hwc-article-recommended-resources .field-name-title-field
 .page-partners-documents .region.region-content .view-search .view-content .views-row .views-field-field-document-files {
   margin-top: 0;
 }
-.node-type-pa-highlights .node-pa-highlights .field-name-field-image {
+.node-type-pa-highlights .main-container .node-pa-highlights h2 {
+  padding-top: 1em;
+}
+.node-type-pa-highlights .main-container .node-pa-highlights .field-name-field-image {
   float: left;
 }
-.node-type-pa-highlights .node-pa-highlights .field-name-field-image img {
+.node-type-pa-highlights .main-container .node-pa-highlights .field-name-field-image img {
   margin-top: 0.3em;
   margin-bottom: 0em;
   margin-right: 1em;
