--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8775,15 +8775,20 @@ body.video-page{
 }
 
 .node-type-pa-highlights{
-	.node-pa-highlights{
-		.field-name-field-image{
-		float: left;
-			img{
-				margin-top: 0.3em;
-				margin-bottom: 0em;
-				margin-right: 1em;
+	.main-container{
+		.node-pa-highlights{
+			h2{
+				padding-top: 1em;
 			}
+			.field-name-field-image{
+			float: left;
+				img{
+					margin-top: 0.3em;
+					margin-bottom: 0em;
+					margin-right: 1em;
+				}
 
+			}
 		}
 	}
 }
