--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -22,12 +22,7 @@
 }
 
 
-@media (max-width: 1200px) {
-
-	/*Events calendar*/
-	span.add-to-my-calendar {
-	 	margin-left: 166px;
-	}
+@media (max-width: 1200px){
 
 	.intro-splash-20{
 		.views-row-first{
@@ -327,6 +322,15 @@
 		}
 	}
 
+	.page-media-centre-events{
+		.view-events-search{
+			span.add-to-my-calendar {
+			    display: block;
+			    float: left;
+		    	margin-left: 400px;
+	    	}
+		}
+	}
 }
 
 @media (max-width: 1465px) {
