--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5219,8 +5219,7 @@ body{
 
 span.add-to-my-calendar{
 	display: block;
-	float: left;
-	margin-left: 400px;
+	float: right;
 }
 
 .group-right2 span.add-to-my-calendar{
