--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8281,6 +8281,9 @@ body.page-tools-and-publications-practical-tools{
 			display: block;
 			float: left;
 			padding-right: 1em;
+			a{
+				font-weight: 700;
+			}
     	}
 	}
 
