--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -6065,6 +6065,11 @@ body.press-room, body.european-week{
 	}
 }
 
+/* HW20-785 */
+body.press-room .media-body{
+    padding-bottom: 2em;
+}
+
 body.european-week{
 	#european_week_date{
 		color: #FFF;
