--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -682,8 +682,14 @@
 		}
 
 		.related-resources-boxes div{
-			width: 25%;
+			width: 30%;
 			margin-right: 0em;
+			.recommended-tool{
+				span{
+					text-align: right;
+					padding-right: 10px;
+				}
+			}
 		}
 
 		#block-hwc-page-share-widget{
