--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -11447,7 +11447,7 @@ article .hwc-share-widget ul {
 }
 .page-past-events .region-content #block-system-main .view-events-search .view-content .views-row .views-field-field-start-date-1,
 .page-events .region-content #block-system-main .view-events-search .view-content .views-row .views-field-field-start-date-1 {
-  font-size: 1em;
+  font-size: 1.4rem;
   margin-bottom: 0.5em;
   font-weight: 600;
   color: #57575a;
