--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -3582,7 +3582,7 @@ p.no-results{
 				}
 
 				.views-field-field-start-date-1{
-					font-size: 1em;
+					font-size: 1.4rem;
 					margin-bottom: 0.5em;
 					font-weight: 600;
 					color: #57575a;
