HW20-742 - STG II: White line between menu and green banner

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -124,7 +124,10 @@ body.logged-in .navbar-header .col-xs-12.col-sm-9.toolbar-no{
 
 body.logged-in.ocp .navbar-header .col-xs-12.col-sm-9{
 	padding-top: 0;
+}
 
+body.logged-in.ocp.act-as-partner .navbar-header .col-xs-12.col-sm-9{
+	padding-top: 15px;
 }
 
 
