HW20-786 - Tablet (vertical): Press Room Related resources boxes are overlapped

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1153,10 +1153,23 @@
 	}
 
 	body.press-room{
+
+
 		.related-resources{ 
 			.related-resources-boxes{ 
 				div{
 					width: 100%;
+					img{
+						float: left;
+						margin:0;
+						padding-left: 1em;
+					}
+					span{
+						width: auto;
+						float: left;
+						padding-left: 1em;
+						padding-top: 20px;
+					}
 				}
 			}
 		}
