--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -9850,6 +9850,17 @@ body .form-control {
   body.press-room .related-resources .related-resources-boxes div {
     width: 100%;
   }
+  body.press-room .related-resources .related-resources-boxes div img {
+    float: left;
+    margin: 0;
+    padding-left: 1em;
+  }
+  body.press-room .related-resources .related-resources-boxes div span {
+    width: auto;
+    float: left;
+    padding-left: 1em;
+    padding-top: 20px;
+  }
   .table-responsive {
     border: 0;
   }
