--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -7738,6 +7738,125 @@ body .form-control {
 .page-node-add-document .back-to-publications img {
   margin-right: 5px;
 }
+/* MHWC-28 - Homogeneise */
+body.mp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
+  float: right;
+  padding-right: 0;
+}
+body.mp .pane-node-field-orgtype .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+}
+body.mp .pane-node-field-orgtype .pane-content {
+  float: left;
+  color: #333;
+}
+body.mp .pane-node-field-orgtype .pane-content .field-name-field-orgtype {
+  padding-top: 4px;
+  font-weight: normal;
+}
+body.mp .pane-node-field-bussines-sector {
+  float: right;
+  padding-top: 0 !important;
+  margin-right: 2em;
+  clear: none;
+}
+body.mp .pane-node-field-bussines-sector .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+}
+body.mp .pane-node-field-bussines-sector .pane-content {
+  float: left;
+  color: #333;
+}
+body.mp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference {
+  padding-top: 4px;
+  font-weight: normal;
+}
+body.mp .panels-flexible-column-first .pane-node-field-country {
+  float: left;
+}
+body.mp .panels-flexible-column-first .pane-node-field-country.profile-inline-field {
+  float: left;
+  min-height: 11rem;
+  padding-top: 2.2rem;
+}
+body.mp .panels-flexible-column-first .pane-node-field-country.profile-inline-field .field-name-field-country img {
+  border: 0;
+  border: 1px solid #eaeaea;
+}
+body.mp .panels-flexible-column-first .pane-node-field-country .field-item {
+  font-size: 2rem;
+  font-weight: 600;
+}
+body.mp .panels-flexible-column-first .pane-node-field-website {
+  float: left;
+  width: 70%;
+}
+body.mp .panels-flexible-column-first .pane-node-field-website a {
+  font-style: normal;
+  width: auto;
+}
+body.mp .panels-flexible-column-first .pane-node-field-website a[target="_blank"]:after {
+  background-image: url(../images/target-blank.png);
+  background-size: 1rem 1rem;
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  content: "";
+  left: 0.5rem;
+  position: relative;
+}
+body.mp .panels-flexible-column-first .pane-node-field-ceo {
+  float: left;
+  width: 70%;
+  display: flex;
+  justify-content: flex-start;
+}
+body.mp .panels-flexible-column-first .pane-node-field-ceo .pane-title {
+  padding-right: 1.5rem;
+  font-weight: bold;
+}
+body.mp .panels-flexible-column-first .pane-node-field-mission-statement,
+body.mp .panels-flexible-column-first .pane-node-field-pledge {
+  background: transparent;
+  background-size: initial;
+  margin-top: 1em;
+  border-radius: 15px;
+  margin-bottom: 1em;
+}
+body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
+body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
+  float: none;
+  color: #003399;
+  font-weight: 600;
+  font-size: 1.5em;
+  padding: 0 0 10px 0;
+}
+body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
+body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
+  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-style: normal;
+  color: #000;
+  padding: 0;
+}
+body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
+  margin: 2rem 0 2rem;
+}
 .isMobile {
   float: right !important;
 }
