--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9096,3 +9096,20 @@ body.mp{
 		}
 	}
 }
+
+/* MHWC-39 - For UX next step */
+
+.view-practical-tools{
+	.clear_filters{
+		padding-bottom: 0em;
+    	padding-top: 0.5em;
+		a{
+			background: #003399;
+			color: #FFF;
+			padding: 5px 10px;
+			border-radius: 5px;
+		}
+	}
+}
+
+/* END MHWC-39 - For UX next step */
