--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9112,4 +9112,23 @@ body.mp{
 	}
 }
 
+.node-type-practical-tool{
+	.group-details{
+		h3{
+			padding-bottom: 0;
+			margin-bottom: 5px;
+		}
+		.field-label{
+			padding-top: 10px;
+			width: auto;
+		}
+		div:nth-child(2) > div.field-label{
+			padding-top: 0;
+		}
+		.field-label-inline .field-label, .field-label-inline .field-items{
+			float: none;
+		}
+	}
+}
+
 /* END MHWC-39 - For UX next step */
