MHWC-48 and MHWC-49

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1446,174 +1446,6 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.05);
   padding-top: 5px;
 }
-#block-menu-block-4,
-#block-menu-block-6 {
-  width: 100%;
-  margin-top: 49px !important;
-}
-aside.col-md-3 .region.region-sidebar-first.well {
-  padding: 0;
-}
-aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.block-title {
-  font-size: 1.4rem;
-  padding: 10px 15px !important;
-  display: block;
-  margin-bottom: 15px;
-  border-radius: 3px;
-  text-decoration: none;
-  cursor: pointer;
-  color: white;
-  font-weight: bold;
-  background-color: #0030a0;
-  border-radius: 25px;
-  padding: 0.5em 0.5em;
-  margin-bottom: 0.5em;
-  padding-left: 1em;
-  padding-right: 30px;
-  position: relative;
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
-aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.block-title a {
-  color: #FFF;
-}
-.left-menu ul {
-  list-style: none;
-}
-.left-menu ul li {
-  background-color: #ecf4cb;
-  border-top-right-radius: 18px;
-  border-bottom-right-radius: 18px;
-  border-top-left-radius: 18px;
-  border-bottom-left-radius: 18px;
-  padding: 0.5em 0.8em 0.5em 1.5em;
-  margin-bottom: 1em;
-  width: 100%;
-}
-.left-menu ul li a {
-  text-decoration: none;
-  padding: 0 20px 0 0;
-}
-.left-menu ul li:hover {
-  background-color: #0030a0;
-}
-.left-menu ul li:hover a {
-  color: #FFFFFF;
-  background: transparent;
-}
-.left-menu ul li ul li:hover a {
-  color: white;
-  background-color: #0030a0;
-}
-.left-menu ul .active {
-  background-color: #daea96;
-  position: relative;
-}
-.left-menu ul .active a {
-  color: #003399;
-  display: block;
-  width: 100%;
-}
-.left-menu ul .active a:before {
-  content: '';
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
-  background: #0030a0;
-  position: absolute;
-  right: 0;
-  top: 10%;
-}
-.left-menu ul li.expanded {
-  background-color: transparent;
-  padding: 0;
-  margin-bottom: 0;
-}
-.left-menu ul li.expanded a {
-  background: #ecf4cb;
-  border-radius: 25px;
-  padding: 8px 23px;
-  color: #003399;
-  margin-bottom: 15px;
-}
-.left-menu ul li.expanded a:before {
-  content: "\e252";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #003399;
-  background-color: transparent;
-  top: 10px;
-  right: 13px;
-}
-.left-menu ul li.expanded a:hover {
-  background: #003399;
-  color: #FFFFFF;
-}
-.left-menu ul li.expanded a:hover:before {
-  color: #FFFFFF;
-}
-.left-menu ul li.expanded a.active {
-  background: #daea96;
-}
-.left-menu ul li.expanded ul.menu li {
-  padding: 0;
-  background-color: transparent;
-}
-.left-menu ul li.expanded ul.menu li a {
-  width: 92%;
-  margin-left: 15px;
-  margin-bottom: 0;
-  padding-right: 30px;
-}
-.left-menu ul li.expanded ul.menu li a:before {
-  content: none;
-}
-.left-menu ul li.expanded.active a.active-trail {
-  background: #daea96;
-  font-weight: 600;
-}
-.left-menu ul li.expanded.active a.active-trail:before {
-  display: block;
-  content: ' ';
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
-  background: #003399;
-  position: absolute;
-  right: 14px;
-  top: 10px;
-}
-.left-menu ul li.expanded.active a.active-trail:hover {
-  background: #0030a0;
-  color: #FFF;
-}
-.left-menu ul li.expanded.active a.active-trail:hover:before {
-  color: #FFF;
-}
-.left-menu ul li.active ul li a:before {
-  content: none;
-}
-.left-menu ul li.active ul li.active a:before {
-  content: '';
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
-  background: #003399;
-  position: absolute;
-  right: 14px;
-  top: 10px;
-}
-.left-menu ul li.expanded.active-trail.active > a:before {
-  content: "\e252";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #003399;
-  background-color: transparent;
-  top: 10px;
-  right: 13px;
-}
 #block-menu-block-5 ul a:before {
   content: none;
 }
@@ -3074,68 +2906,6 @@ div.workbench-info-block {
   float: right;
   vertical-align: middle;
   color: #FFF;
-}
-.left-menu.accordion-menu ul.menu > li.expanded ul.menu {
-  display: none;
-}
-.left-menu.accordion-menu ul.menu > li.expanded.active ul.menu {
-  display: block;
-}
-.left-menu.accordion-menu ul > li.expanded > ul > li.expanded > ul {
-  margin-top: 10px;
-}
-.left-menu.accordion-menu ul > li.expanded > ul > li.expanded > ul li {
-  margin-left: 10px;
-  width: 94%;
-}
-.left-menu.accordion-menu .external-menu-item {
-  background: url('../images/target-blank-blue.png') 90% no-repeat #ecf4cb;
-  padding-right: 45px !important;
-}
-.left-menu.accordion-menu ul li ul li:hover a {
-  background: #ecf4cb;
-  color: #003399;
-}
-.left-menu.accordion-menu ul li ul li ul li:hover a {
-  background: #0030a0;
-  color: #FFF;
-}
-.accordion-menu.left-menu ul li.expanded a.external-menu-item:hover {
-  background: url('../images/target-blank-white-12.png') 90% no-repeat #0030a0;
-}
-.accordion-menu.left-menu ul li.expanded a:hover {
-  background: #003399;
-  color: #FFFFFF;
-}
-.accordion-menu.left-menu ul li a.active-trail:after {
-  content: '';
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
-  background: #003399;
-  position: absolute;
-  right: 15px;
-  top: 28%;
-}
-.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded > a:after {
-  content: "\e252";
-  font-family: "Glyphicons Halflings";
-  float: right;
-  vertical-align: middle;
-  color: #003399;
-  background-color: transparent;
-  top: 10px;
-  right: 13px;
-}
-.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded:hover > a:after {
-  color: #FFFFFF;
-}
-#block-hwc-homepage-previous-campaign-nav {
-  clear: both;
-}
-.accordion-menu {
-  float: left;
-  margin-top: 47px;
 }
 .main-container .node-campaign-18 .body-summary,
 .main-container .node-campaign-16 .body-summary {
@@ -7882,6 +7652,309 @@ body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
 .node-type-practical-tool .group-details .field-label-inline .field-label,
 .node-type-practical-tool .group-details .field-label-inline .field-items {
   float: none;
+}
+aside.col-md-3 .region.region-sidebar-first.well {
+  padding: 0;
+}
+aside.col-md-3 .region.region-sidebar-first.well .block-menu-block.left-menu h2.block-title {
+  color: #003399;
+  font-size: 1.6em;
+}
+#block-menu-block-4,
+#block-menu-block-6 {
+  width: 100%;
+  margin-top: 49px !important;
+  margin-bottom: 2em;
+}
+.left-menu ul {
+  list-style: none;
+}
+.left-menu ul li {
+  background-color: transparent;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  padding: 8px 0.8em 8px 0;
+  margin-bottom: 0;
+  width: 100%;
+  border-bottom: 1px solid #bcd75b;
+}
+.left-menu ul li a {
+  text-decoration: none;
+  padding: 0 20px 0 0;
+}
+.left-menu ul li:hover {
+  background-color: transparent;
+}
+.left-menu ul li:hover a {
+  color: #5bb108;
+  background: transparent;
+  font-weight: bold;
+}
+.left-menu ul li ul li:hover a {
+  color: #5bb108;
+  background-color: transparent;
+  font-weight: bold;
+}
+.left-menu ul .active {
+  background-color: transparent;
+  position: relative;
+}
+.left-menu ul .active a {
+  color: #003399;
+  display: block;
+  width: 100%;
+  font-weight: bold;
+}
+.left-menu ul .active a:before {
+  content: none;
+}
+.left-menu ul li.expanded {
+  background-color: transparent;
+  padding: 0;
+  margin-bottom: 0;
+  border-bottom: 0;
+}
+.left-menu ul li.expanded a {
+  background: transparent;
+  border-radius: 25px;
+  padding: 8px 0;
+  color: #003399;
+  margin-bottom: 0;
+}
+.left-menu ul li.expanded a:before {
+  content: none;
+}
+.left-menu ul li.expanded a:hover {
+  background: transparent;
+  color: #5bb108;
+  font-weight: bold !important;
+}
+.left-menu ul li.expanded a:hover:before {
+  color: #bcd75b;
+}
+.left-menu ul li.expanded a.active {
+  background: transparent;
+}
+.left-menu ul li.expanded ul.menu {
+  margin-left: 1em;
+}
+.left-menu ul li.expanded ul.menu li {
+  padding: 0;
+  background-color: transparent;
+}
+.left-menu ul li.expanded ul.menu li a {
+  width: 92%;
+  margin-left: 8px;
+  margin-bottom: 0;
+  padding-right: 30px;
+  font-weight: normal;
+  border-bottom: 0 !important;
+}
+.left-menu ul li.expanded ul.menu li a:before {
+  content: none;
+}
+.left-menu ul li.expanded.active a.active-trail {
+  background: transparent;
+  font-weight: bold;
+  border-bottom: 1px solid #bcd75b;
+  border-radius: 0;
+}
+.left-menu ul li.expanded.active a.active-trail:before {
+  content: none;
+}
+.left-menu ul li.expanded.active a.active-trail:hover {
+  background: transparent;
+  color: #bcd75b;
+}
+.left-menu ul li.active ul li a:before {
+  content: none;
+}
+.left-menu ul li.active ul li.active a:before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background: #003399;
+  position: absolute;
+  right: 14px;
+  top: 10px;
+}
+.left-menu ul li.expanded.active-trail.active > a:before {
+  content: none;
+}
+.left-menu.accordion-menu {
+  max-width: 265px;
+  float: right;
+  padding-right: 1em;
+}
+.left-menu.accordion-menu ul .active {
+  background: transparent;
+}
+.left-menu.accordion-menu .left-menu ul li:hover {
+  background-color: transparent;
+}
+.left-menu.accordion-menu .menu-level-2 ul li {
+  border: 0;
+}
+.left-menu.accordion-menu .menu-level-2 ul li ul li {
+  border-bottom: 1px solid #bcd75b;
+}
+.left-menu.accordion-menu .menu-level-2 ul li ul li ul {
+  margin-left: 10px;
+}
+.left-menu.accordion-menu .menu-level-2 ul li ul li ul li {
+  border: 0;
+  margin-left: 0;
+}
+.left-menu.accordion-menu .menu-level-2 ul li ul li ul li a {
+  border-bottom: 1px solid #bcd75b !important;
+  border-radius: 0;
+  margin-bottom: 0;
+  padding-right: 0px;
+  width: 100%;
+  padding-left: 8px;
+}
+.left-menu.accordion-menu .menu-level-2 ul li ul li.expanded {
+  border: 0;
+  margin-left: 0;
+}
+.left-menu.accordion-menu .menu-level-2 ul li ul li.expanded a {
+  border-bottom: 1px solid #bcd75b !important;
+  border-radius: 0;
+  margin-bottom: 0;
+  padding-right: 0px;
+  width: 100%;
+}
+.left-menu.accordion-menu .menu-level-2 ul li .nolink {
+  padding: 10px 15px;
+  display: block;
+  margin-bottom: 15px;
+  border-radius: 3px;
+  text-decoration: none;
+  cursor: pointer;
+  color: #003399;
+  font-weight: bold;
+  background-color: transparent;
+  border-radius: 12px;
+  padding: 0.5em 0.5em;
+  margin-bottom: 0.5em;
+  padding-left: 1em;
+  padding-right: 30px;
+  position: relative;
+  border: 1px solid #003399;
+}
+.left-menu.accordion-menu .menu-level-2 ul li .nolink:after {
+  content: "\e250";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #003399;
+  position: absolute;
+  right: 10px;
+  top: 0;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+.left-menu.accordion-menu .menu-level-2 ul li .active-trail.nolink:after {
+  content: "\e252";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #bcd75b;
+}
+.left-menu.accordion-menu .menu-level-2 ul li .up-arrow:after {
+  content: "\e252";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #bcd75b;
+}
+.left-menu.accordion-menu .menu-level-2 ul li .active-trail.nolink.closed-down-arrow:after {
+  content: "\e250";
+  font-family: "Glyphicons Halflings";
+  float: right;
+  vertical-align: middle;
+  color: #003399;
+}
+.left-menu.accordion-menu ul.menu > li.expanded ul.menu {
+  display: none;
+}
+.left-menu.accordion-menu ul.menu > li.expanded.active ul.menu {
+  display: block;
+}
+.left-menu.accordion-menu ul.menu > li.expanded.active ul.menu a {
+  width: 100%;
+  padding-right: 0;
+}
+.left-menu.accordion-menu ul > li.expanded > ul > li.expanded > ul {
+  margin-top: 10px;
+}
+.left-menu.accordion-menu ul > li.expanded > ul > li.expanded > ul li {
+  margin-left: 0;
+  width: 100%;
+}
+.left-menu.accordion-menu .external-menu-item:after {
+  content: ' ';
+  background: url('../images/target-blank-blue.png') no-repeat transparent;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-left: 10px;
+}
+.left-menu.accordion-menu ul li ul li:hover a {
+  background: transparent;
+  color: #003399;
+}
+.left-menu.accordion-menu ul li ul li ul li:hover a {
+  background: #0030a0;
+  color: #FFF;
+}
+.accordion-menu.left-menu ul li.expanded a.external-menu-item:hover {
+  color: #5bb108;
+  font-weight: bold;
+}
+.accordion-menu.left-menu ul li.expanded a.external-menu-item:hover:after {
+  content: ' ';
+  background: url('../images/target-blank-green-hover.png') 90% no-repeat transparent;
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  margin-left: 10px;
+}
+.accordion-menu.left-menu ul li.expanded a:hover {
+  background: transparent;
+  color: #5bb108;
+}
+.accordion-menu.left-menu ul li a.active-trail:after {
+  content: none;
+}
+.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded > a:after {
+  content: none;
+}
+.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded:hover > a:after {
+  color: #5bb108;
+}
+.left-menu.accordion-menu ul > li.expanded > ul > li.expanded > ul {
+  margin-top: 0;
+}
+#block-menu-block-5 > div > ul > li > ul > li.expanded {
+  border-bottom: 0;
+}
+#block-hwc-homepage-previous-campaign-nav {
+  clear: both;
+}
+.accordion-menu {
+  float: left;
+  margin-top: 47px;
+}
+#block-menu-block-5 > div > ul li.last.expanded {
+  margin-top: 1em;
+}
+#block-menu-block-5 > div > ul li.last {
+  margin-bottom: 1em;
 }
 .isMobile {
   float: right !important;
