--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1663,202 +1663,6 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 
 }
 
-#block-menu-block-4, #block-menu-block-6{
-	width: 100%;
-	margin-top: 49px !important;
-}
-
-
-aside.col-md-3{
-	.region.region-sidebar-first.well{
-		padding: 0;
-		.block-menu-block.left-menu{
-			h2.block-title{
-				font-size: 1.4rem;
-				padding: 10px 15px !important;
-			    display: block;
-			    margin-bottom: 15px;
-			    border-radius: 3px;
-			    text-decoration: none;
-			    cursor: pointer;
-			    color: white;
-			    font-weight: bold;
-			    background-color: #0030a0;
-			    border-radius: 25px;
-			    padding: 0.5em 0.5em;
-			    margin-bottom: 0.5em;
-			    padding-left: 1em;
-			    padding-right: 30px;
-			    position: relative;
-			    margin-left: 0 !important;
-			    margin-right: 0 !important;
-			    a{
-			    	color: #FFF;
-			    }
-			}
-		}
-	}
-}
-
-.left-menu ul{
-	list-style: none;
-	li{
-		background-color: #ecf4cb;
-	  	border-top-right-radius: 18px;
-	  	border-bottom-right-radius: 18px;
-	  	border-top-left-radius: 18px;
-	  	border-bottom-left-radius: 18px;
-	  	padding: 0.5em 0.8em 0.5em 1.5em;
-	  	margin-bottom: 1em;
-	  	width: 100%;
-	  	a{
-	  		text-decoration: none;
-	  		padding: 0 20px 0 0;
-
-	  	}
-	}
-
-	li:hover{
-		background-color:#0030a0;	
-		a{
-			color: #FFFFFF;
-			background: transparent;
-		}
-	}
-
-
-	li{
-		ul{
-			li:hover{
-				a{
-					color:white;
-					background-color:#0030a0;	
-				}
-			}
-		}
-	}
-
-	.active{
-    background-color: #daea96;
-    position: relative;
-    a{
-      color: #003399;
-      display: block;
-      width: 100%;
-      &:before{
-		content: '';
-		width: 15px;
-		height: 15px;
-		border-radius: 10px;
-		background: #0030a0;
-		position: absolute;
-		right: 0;
-		top: 10%;
-	    }
-    }
-  }
-
-  li.expanded{
-  	background-color: transparent;
-  	padding: 0;
-  	margin-bottom: 0;
-  	a{
-  		background: #ecf4cb;
-    	border-radius: 25px;
-    	padding: 8px 23px;
-    	color: #003399;
-    	margin-bottom: 15px;
-    	&:before{
-    		content: "\e252";
-		    font-family: "Glyphicons Halflings";
-		    float: right;
-		    vertical-align: middle;
-		    color: #003399;
-		    background-color: transparent;
-		    top: 10px;
-   			right: 13px;
-    	}
-    	&:hover{
-    		background: #003399;
-    		color: #FFFFFF;
-    		&:before{
-				color: #FFFFFF;
-    		}
-    	}
-  	}
-  	a.active{
-  		background: #daea96;
-  	}
-  	ul.menu{
-  		li{
-  			padding: 0;
-  			background-color: transparent;
-  			a{
-  				width: 92%;
-  				margin-left: 15px;
-  				margin-bottom: 0;
-  				padding-right: 30px;
-  				&:before{
-    				content: none;
-    			}
-  			}
-  		}
-  	}
-  }
-
-  li.expanded.active a.active-trail{
-	background: #daea96;
-	font-weight: 600;
-	&:before{
-		display: block;
-  		content: ' ';
-		width: 15px;
-		height: 15px;
-		border-radius: 10px;
-		background: #003399;
-		position: absolute;
-		right: 14px;
-    	top: 10px;
-    }
-    &:hover{
-    	background: #0030a0;
-    	color: #FFF;
-    	&:before{
-    		color: #FFF;
-    	}
-    }
-  }
-
-  li.active ul li a:before{
-  	content: none;
-  }
-
-  li.active ul li.active a:before{
-  		content: '';
-		width: 15px;
-		height: 15px;
-		border-radius: 10px;
-		background: #003399;
-		position: absolute;
-		right: 14px;
-    	top: 10px;
-  }
-
-  li.expanded.active-trail.active > a{
-  	&:before{
-		content: "\e252";
-	    font-family: "Glyphicons Halflings";
-	    float: right;
-	    vertical-align: middle;
-	    color: #003399;
-	    background-color: transparent;
-	    top: 10px;
-		right: 13px;
-	}
-  }
-
-}
-
 #block-menu-block-5{
 	ul{
     a{
@@ -3475,90 +3279,6 @@ div.workbench-info-block{
 			}
 		}
 	}
-}
-
-.left-menu.accordion-menu{
-	ul.menu{
-		> li.expanded{
-			ul.menu{
-				display: none;
-			}
-		}
-		> li.expanded.active{
-			ul.menu{
-				display: block;
-			}
-		}
-	}
-
-	ul > li.expanded > ul > li.expanded > ul{
-		margin-top: 10px;
-		li{
-			margin-left: 10px;
-			width: 94%;
-		}
-	}
-
-	.external-menu-item{
-		background: url('../images/target-blank-blue.png') 90% no-repeat #ecf4cb;
-		padding-right: 45px !important;
-	}
-}
-
-
-.left-menu.accordion-menu ul li ul li:hover a{
-	background: #ecf4cb;
-	color: #003399;
-}
-
-.left-menu.accordion-menu ul li ul li ul li:hover a{
-	background: #0030a0;
-    color: #FFF;
-}
-
-.accordion-menu.left-menu ul li.expanded a.external-menu-item:hover {
-    background: url('../images/target-blank-white-12.png') 90% no-repeat #0030a0;
-}
-
-.accordion-menu.left-menu ul li.expanded a:hover {
-    background: #003399;
-    color: #FFFFFF;
-}
-
-
-.accordion-menu.left-menu ul li a.active-trail:after{
-	content: '';
-    width: 15px;
-    height: 15px;
-    border-radius: 10px;
-    background: #003399;
-    position: absolute;
-    right: 15px;
-    top: 28%;
-}
-
-.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded > a:after{
-	content: "\e252";
-    font-family: "Glyphicons Halflings";
-    float: right;
-    vertical-align: middle;
-    color: #003399;
-    background-color: transparent;
-    top: 10px;
-    right: 13px;
-}
-
-.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded:hover > a:after{
-    color: #FFFFFF;
-}
-
-#block-hwc-homepage-previous-campaign-nav{
-	clear: both;
-}
-
-.accordion-menu{
-	float: left;
-	margin-top: 47px;
 }
 
 .main-container{
@@ -9127,6 +8847,377 @@ body.mp{
 		}
 		.field-label-inline .field-label, .field-label-inline .field-items{
 			float: none;
+		}
+	}
+}
+
+aside.col-md-3{
+	.region.region-sidebar-first.well{
+		padding: 0;
+		.block-menu-block.left-menu{
+			h2.block-title{
+		    	color: #003399;
+		    	font-size: 1.6em;
+			}
+		}
+	}
+}
+
+#block-menu-block-4, #block-menu-block-6{
+	width: 100%;
+	margin-top: 49px !important;
+	margin-bottom: 2em;
+}
+
+.left-menu ul{
+	list-style: none;
+	li{
+		background-color: transparent;
+	  	border-top-right-radius: 0;
+	  	border-bottom-right-radius: 0;
+	  	border-top-left-radius: 0;
+	  	border-bottom-left-radius: 0;
+	  	padding: 8px 0.8em 8px 0;
+	  	margin-bottom: 0;
+	  	width: 100%;
+	  	border-bottom: 1px solid #bcd75b;
+	  	a{
+	  		text-decoration: none;
+	  		padding: 0 20px 0 0;
+
+	  	}
+	}
+
+	li:hover{
+		background-color:transparent;	
+		a{
+			color: #5bb108;
+			background: transparent;
+			font-weight: bold;
+		}
+	}
+
+
+	li{
+		ul{
+			li:hover{
+				a{
+					color:#5bb108;
+					background-color:transparent;
+					font-weight: bold;	
+				}
+			}
+		}
+	}
+
+	.active{
+    background-color: transparent;
+    position: relative;
+    a{
+      color: #003399;
+      display: block;
+      width: 100%;
+      font-weight: bold;
+      &:before{
+		content: none;
+	    }
+    }
+  }
+
+  li.expanded{
+  	background-color: transparent;
+  	padding: 0;
+  	margin-bottom: 0;
+  	border-bottom: 0;
+  	a{
+  		background: transparent;
+    	border-radius: 25px;
+    	padding: 8px 0;
+    	color: #003399;
+    	margin-bottom: 0;
+    	&:before{
+    		content: none;
+    	}
+    	&:hover{
+    		background: transparent;
+    		color: #5bb108;
+    		font-weight: bold !important;
+    		&:before{
+				color: #bcd75b;
+    		}
+    	}
+  	}
+  	a.active{
+  		background: transparent;
+  	}
+  	ul.menu{
+  		margin-left: 1em;
+  		li{
+  			padding: 0;
+  			background-color: transparent;
+  			a{
+  				width: 92%;
+  				margin-left: 8px;
+  				margin-bottom: 0;
+  				padding-right: 30px;
+  				font-weight: normal;
+  				border-bottom: 0 !important;
+  				&:before{
+    				content: none;
+    			}
+  			}
+  		}
+  	}
+  }
+
+  li.expanded.active a.active-trail{
+	background: transparent;
+	font-weight: bold;
+	border-bottom: 1px solid #bcd75b;
+	border-radius:0;
+	&:before{
+		content: none;
+    }
+    &:hover{
+    	background: transparent;
+    	color: #bcd75b;
+    }
+  }
+
+  li.active ul li a:before{
+  	content: none;
+  }
+
+  li.active ul li.active a:before{
+  		content: '';
+		width: 15px;
+		height: 15px;
+		border-radius: 10px;
+		background: #003399;
+		position: absolute;
+		right: 14px;
+    	top: 10px;
+  }
+
+  li.expanded.active-trail.active > a{
+  	&:before{
+		content: none;
+	}
+  }
+
+}
+
+.left-menu.accordion-menu{
+	max-width: 265px;
+    float: right;
+    padding-right: 1em;
+	ul .active{
+		background: transparent;
+	}
+
+	.left-menu ul li:hover {
+    	background-color: transparent;
+	}
+
+	.menu-level-2{
+		ul{
+			li{
+				border: 0;
+				ul{
+					li{
+						border-bottom: 1px solid #bcd75b;
+						ul{
+							margin-left: 10px;
+							li{
+								border:0;
+								margin-left: 0;
+								a{
+									border-bottom: 1px solid #bcd75b !important;
+									border-radius: 0;
+									margin-bottom: 0;
+    								padding-right: 0px;
+    								width: 100%;
+    								padding-left: 8px;
+								}
+							}
+						}
+					}
+					li.expanded{
+						border:0;
+						margin-left: 0;
+						a{
+							border-bottom: 1px solid #bcd75b !important;
+							border-radius: 0;
+							margin-bottom: 0;
+							padding-right: 0px;
+							width: 100%;
+						}
+					}
+				}
+				.nolink{
+					padding: 10px 15px;
+					display: block;
+					margin-bottom: 15px;
+					border-radius: 3px;
+					text-decoration: none;
+					cursor: pointer;
+					color: #003399;
+					font-weight: bold;
+					background-color: transparent;
+					border-radius: 12px;
+					padding: 0.5em 0.5em;
+					margin-bottom: 0.5em;
+					padding-left: 1em;
+					padding-right: 30px;
+					position: relative;
+					border:1px solid #003399;
+				}
+
+				.nolink:after {
+				    content: "\e250";
+				    font-family: "Glyphicons Halflings";
+				    float: right;
+				    vertical-align: middle;
+				    color: #003399;
+				    position: absolute;
+    				right: 10px;
+    				top: 0;
+    				height: 100%;
+    				display: flex;
+    				align-items: center;
+				}
+
+				.active-trail.nolink:after {
+				    content: "\e252";
+				    font-family: "Glyphicons Halflings";
+				    float: right;
+				    vertical-align: middle;
+				    color: #bcd75b;
+				}
+
+				.up-arrow:after {
+				    content: "\e252";
+				    font-family: "Glyphicons Halflings";
+				    float: right;
+				    vertical-align: middle;
+				    color: #bcd75b;
+				}
+				.active-trail.nolink.closed-down-arrow:after {
+				    content: "\e250";
+				    font-family: "Glyphicons Halflings";
+				    float: right;
+				    vertical-align: middle;
+				    color: #003399;
+				}
+			}
+		}
+	}
+}
+
+.left-menu.accordion-menu{
+	ul.menu{
+		> li.expanded{
+			ul.menu{
+				display: none;
+			}
+		}
+		> li.expanded.active{
+			ul.menu{
+				display: block;
+				a{
+					width: 100%;
+					padding-right: 0;
+				}
+			}
+		}
+	}
+
+	ul > li.expanded > ul > li.expanded > ul{
+		margin-top: 10px;
+		li{
+			margin-left: 0;
+			width: 100%;
+		}
+	}
+
+	.external-menu-item:after{
+		content: ' ';
+	    background: url('../images/target-blank-blue.png') no-repeat transparent;
+	    display: inline-block;
+	    width: 12px;
+	    height: 12px;
+	    margin-left: 10px;
+	}
+}
+
+
+.left-menu.accordion-menu ul li ul li:hover a{
+	background: transparent;
+	color: #003399;
+}
+
+.left-menu.accordion-menu ul li ul li ul li:hover a{
+	background: #0030a0;
+    color: #FFF;
+}
+
+.accordion-menu.left-menu ul li.expanded a.external-menu-item:hover {
+    color: #5bb108;
+    font-weight: bold;
+    &:after{
+    	content: ' ';
+    	background: url('../images/target-blank-green-hover.png') 90% no-repeat transparent;
+	    display: inline-block;
+	    width: 12px;
+	    height: 12px;
+	    margin-left: 10px;
+    }
+}
+
+.accordion-menu.left-menu ul li.expanded a:hover {
+    background: transparent;
+    color: #5bb108;
+}
+
+.accordion-menu.left-menu ul li a.active-trail:after{
+	content: none;
+}
+
+.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded > a:after{
+	content: none;
+}
+
+.accordion-menu.left-menu > div > ul > li.expanded > ul > li.expanded:hover > a:after{
+    color: #5bb108;
+}
+
+.left-menu.accordion-menu ul > li.expanded > ul > li.expanded > ul{
+	margin-top: 0;
+}
+
+#block-menu-block-5 > div > ul > li > ul > li.expanded{
+	border-bottom: 0;
+}
+
+#block-hwc-homepage-previous-campaign-nav{
+	clear: both;
+}
+
+.accordion-menu{
+	float: left;
+	margin-top: 47px;
+}
+
+
+#block-menu-block-5 {
+	> div {
+		> ul{
+			li.last.expanded{
+				margin-top: 1em;
+			}
+			li.last{
+				margin-bottom: 1em;
+			}
 		}
 	}
 }
